welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: not found: value num
			{ if (nums(i)==nums(i+2)+1 || (Math.abs(num(i+2))<=2) )
                                                                ^